--- a/Ajedrez (Mariano)/.classpath
+++ b/Ajedrez (Mariano)/.classpath
@@ -4,8 +4,7 @@
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="C:/Users/ALUMNO/git/Ajedrez_Mariano/Ajedrez (Mariano)/lib/sqlite-jdbc-3.14.2.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/ALUMNO/git/Ajedrez_Mariano/Ajedrez (Mariano)/lib/jfreechart-1.0.19/lib/jcommon-1.0.23.jar"/>
-	<classpathentry kind="lib" path="C:/Users/ALUMNO/git/Ajedrez_Mariano/Ajedrez (Mariano)/lib/jfreechart-1.0.19/lib/jfreechart-1.0.19.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ALUMNO/git/Ajedrez-Mariano/Ajedrez (Mariano)/lib/jfreechart-1.0.19-demo.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ALUMNO/git/Ajedrez-Mariano/Ajedrez (Mariano)/lib/sqlite-jdbc-3.14.2.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
